--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     </head>
 
     <body>
-        <h1>This is some text</h1>
+        <h1>03/28/2021</h1>
+
+        <p>
+            This is a paragraph:
+            <br>     
+            <b>This is bold</b>
+        </p>
+
+        <img src="img/34-347923_dio-holy-diver.jpg" height="1000" width="1000" alt="Image of the day">
+        <hr width="2500">
     </body>
 </html>
